# GrayscottbyDS

./: CMakeLists.txt  CMakeLists_amarel.txt  CMakeLists_cori.txt  README.md
analytics/: isosurface.cpp  reader.cpp  reader.h
protos/: metaserver.proto
putgetMeta/: common.h  metaclient.cpp  metaclient.h
scripts/: cori_bp4_io.scripts  cori_triggertime.scripts  testput.scripts  triggertime.scripts
setting/: settings.cpp  settings.h  settings.json
sim_gs/: CMakeLists.txt  adios2.xml  gray-scott.h  isosurface.cpp  main.cpp  settings.json  settings_gs.cpp  writer.cpp  writer.h
sim_single/: CMakeLists.txt  main.cpp  settings_single.cpp  settings_single.h  settings_single.json  sim_single.cpp  sim_single.h
sim_synthetic/: main.cpp  settings_syn.cpp  settings_syn.h  settings_syn.json  sim_synthetic.cpp  sim_synthetic.h  writer.cpp  writer.h
simulation/: gray-scott.h  main.cpp  settings.json  writer.cpp  writer.h
testdsexample/: CMakeLists.txt
